added a button to access the next page

--- a/src/app/gitsearch/gitsearch.component.html
+++ b/src/app/gitsearch/gitsearch.component.html
@@ -5,8 +5,23 @@
   </h1>
   <img width="300" alt="image of github" src="assets/images/github.png">
 </div>
-<p>
+<p class="big">
   This is a platform where users may enter a GitHub username into a form, submit it and see names and descriptions of that person's public repositories. A person can also look for repositories.
+   <br>
+
+   You know those moments that you are given a project or you want to do a project but have no idea of what to do?!
+   <br>
+
+   Well, this is the right for you. Here you can enter anyone's name on github or certain repository and access it on Github.
+   <br>
+
+   Have fun but not too much fun.
 </p>
+ <br>
+
+ <div style="text-align:center">
+    <button (click)="btnClick()">Next Page</button>
+   </div>
+   
 
 
