--- a/src/app/git/git.component.html
+++ b/src/app/git/git.component.html
@@ -1,8 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+  
   <h1>
    WELCOME TO {{ title }}
   </h1>
+
   <img width="300" alt="image of github" src="assets/images/github.png">
 </div>
 <p class="big">
@@ -19,6 +21,14 @@
 </p>
  <br>
 
+ <div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      {{user.name}} <small>{{user.login}}</small>
+        {{user.company}}    
+    </div>
+  </div>
+ </div>
  
    
 
