--- a/src/app/git/git.component.html
+++ b/src/app/git/git.component.html
@@ -21,14 +21,38 @@
 </p>
  <br>
 
- <div>
+ <div *ngIf="profile">
   <div class="panel panel-default">
     <div class="panel-heading">
-      {{user.name}} <small>{{user.login}}</small>
-        {{user.company}}    
+      {{profile.name}} <small>{{profile.login}}</small>
+  
+    </div>
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="{{profile.avatar_url}}"  class="img-circle img-responsive" alt="Profile Image">
+
+        </div>
+        <div class="col-sm-5">
+          <ul class="list-group">
+            <li> class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
+          </ul>
+
+        </div>
+        <div class="col-sm-4">
+          <div>
+            <p>
+              <span class="label label-primary">{{profile.followers}} | Followers</span>
+              <span class="label label-success">{{profile.public_gists}} | Public gists</span>
+              <span class="label label-info">{{profile.public_repos}} | Public repos</span>
+            </p>
+            <p><a href="{{profile.html_url}}" target="_blank" class="btn btn-primary" >View on Github</a></p>
+          </div>
+        </div>
+        </div>
+      </div>
     </div>
   </div>
- </div>
  
    
 
