--- a/src/app/git/git.component.html
+++ b/src/app/git/git.component.html
@@ -20,8 +20,9 @@
    Have fun but not too much fun.
 </p>
  <br>
+ <input type="text">
 
- <div *ngIf="profile">
+ <div>
   <div class="panel panel-default">
     <div class="panel-heading">
       {{profile.name}} <small>{{profile.login}}</small>
@@ -35,7 +36,7 @@
         </div>
         <div class="col-sm-5">
           <ul class="list-group">
-            <li> class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
+            <li class="list-group-item">{{profile.bio}}</li>
           </ul>
 
         </div>
