--- a/src/app/git/git.component.html
+++ b/src/app/git/git.component.html
@@ -23,6 +23,7 @@
  <input type="text">
 
  <div>
+   <button (click)=getProfileInfo()> Search</button>
   <div class="panel panel-default">
     <div class="panel-heading">
       {{user.name}} <small>{{user.login}}</small>
