--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-background-image: url('https://images.pexels.com/photos/532173/pexels-photo-532173.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+background-image: url('https://images.pexels.com/photos/1146562/pexels-photo-1146562.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
 background-attachment: fixed;
 background-repeat: no-repeat;
+background-size:cover;
+}
+
+p{
+    color: white;
+    
+}
+
+h1{
+    color: white;
 }
