--- a/src/app/git/git.component.html
+++ b/src/app/git/git.component.html
@@ -29,29 +29,29 @@
    <button  (click)=getProfileInfo() (click)=getRepo()> Search</button>
   <div class="panel panel-default">
     <div class="panel-heading">
-      {{users.name}} <small>{{users.login}}</small>
+      {{user.name}} <small>{{user.login}}</small>
   
     </div>
     <div class="panel-body">
       <div class="row">
         <div class="col-sm-3">
-          <img src="{{users.avatar_url}}"  class="img-circle img-responsive" alt="User Image">
+          <img src="{{user.avatar_url}}"  class="img-circle img-responsive" alt="User Image">
 
         </div>
         <div class="col-sm-5">
           <ul class="list-group">
-            <li class="list-group-item">{{users.bio}}</li>
+            <li class="list-group-item">{{user.bio}}</li>
           </ul>
 
         </div>
         <div class="col-sm-4">
           <div>
             <p>
-              <span class="label label-primary">Followers | {{users.followers}} </span>
-              <span class="label label-success">Public gists| {{users.public_gists}} | </span>
-              <span class="label label-info"> Public repos  | {{users.public_repos}}</span>
+              <span class="label label-primary">Followers | {{user.followers}} </span>
+              <span class="label label-success">Public gists| {{user.public_gists}} | </span>
+              <span class="label label-info"> Public repos  | {{user.public_repos}}</span>
             </p>
-            <p><a href="{{users.html_url}}" target="_blank" class="btn btn-primary" >View on Github</a></p>
+            <p><a href="{{user.html_url}}" target="_blank" class="btn btn-primary" >View on Github</a></p>
           </div>
 
         </div>
@@ -60,7 +60,7 @@
           <div *ngFor="let repo of repos" class="col-md-6">
             <div class="card">
               <a href="{{repo.html_url}}"><h3>{{repo.name}}</h3></a> 
-              <h4>Repo id:{{repo.id}}</h4>
+              <h4>Repos id:{{repo.id}}</h4>
               <!-- <a href="{{}}"></a> -->
               <h5>{{repo.language}}</h5>
             </div>
